--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Fractal Generator</title>
-    <meta http-equiv="refresh" content="0; url=dist/index.html" />
+    <meta http-equiv="refresh" content="0; url=docs/index.html" />
   </head>
   <body>
   </body>
